Closed Bug 1381231 Opened 7 years ago Closed 4 years ago

Firefox does not recognize xf86reload

Categories

(Core :: Widget: Gtk, defect, P3)

54 Branch
defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox82 --- fixed

People

(Reporter: drixi.b, Assigned: gwhitneycom5)

References

Details

Attachments

(2 files, 1 obsolete file)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:54.0) Gecko/20100101 Firefox/54.0
Build ID: 20170612122310

Steps to reproduce:

Press the reload key, bound to XF86Reload. In my case this is on a Chromebook running GalliumOS. 


Actual results:

Firefox does nothing whatsoever.


Expected results:

Firefox should reload the page (as when pressing F5).

An old bug actually mentions this but it was mistakenly closed (only a subset of it was implemented): https://bugzilla.mozilla.org/show_bug.cgi?id=376206
In particular, it sounds like firefox handles xf86refresh as it should, but not xf86reload. These should probably map to the same.
Component: Untriaged → Keyboard Navigation
Guessing this is actually a widget bug?
Component: Keyboard Navigation → Widget: Gtk
Product: Firefox → Core
Priority: -- → P3
Attached patch Adding XF86Reload (obsolete) — Splinter Review
This patch fixes it for me.
Comment on attachment 8937438 [details] [diff] [review]
Adding XF86Reload

diff -ura a/widget/gtk/nsWindow.cpp b/widget/gtk/nsWindow.cpp
--- a/widget/gtk/nsWindow.cpp	2017-12-18 12:52:22.504435000 +0100
+++ b/widget/gtk/nsWindow.cpp	2017-12-19 10:53:58.018830655 +0100
@@ -3056,6 +3056,7 @@
         case GDK_Forward:
             return DispatchCommandEvent(nsGkAtoms::Forward);
         case GDK_Refresh:
+        case GDK_Reload:
             return DispatchCommandEvent(nsGkAtoms::Reload);
         case GDK_Stop:
             return DispatchCommandEvent(nsGkAtoms::Stop);
Attached patch Add XF86Reload 2Splinter Review
Sorry, the previous comment 2 was an error. Meant to attach this improvement of the patch.
Attachment #8937438 - Attachment is obsolete: true

The issue appears still to exist in Firefox 81.0b4. Given that patches were provided earlier to rectify this issue, what might I do to help get a fix into the stream for release? Would submitting code via Phabricator (if I have that spelled right) help? Thanks for letting me know, happy to put a bit of effort into this help get a fix in. Thanks!

Yeah, the patch looks fine to me, it's just a matter of submitting it for review (though I'm not a gtk peer). If you send the patch to phabricator with r?stransky, Martin can review and check it in :)

Assignee: nobody → gwhitneycom5

OK, I tried my hand at it. The process seems a bit complex (which is understandable, as Firefox is a much larger project than other open-source efforts I've contributed to) so I hope I've done things right so far. I am slightly worried by the annotation just above that the Assignee has been changed to me; is there anything else I need to do to move this along? Thank you so much for your advice so far!

Pushed by cbrindusan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0de10c26da55
Add GDK_Reload to the keyvals triggering Reload r=stransky
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: