Bug 1381231 - Add GDK_Reload to the keyvals triggering Reload r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D89234